INTERNAL-70: Remove unnecessary styles

--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
@@ -89,13 +89,13 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                     </div>
                                 </div>
                             </template>
-                            <div class="hidden md:block mt-1 leading-relaxed">
+                            <div class="hidden md:block mt-1">
                                 <p class="font-bold text-lg mb-3" x-text="review.summary"></p>
                                 <p x-text="review.text"></p>
                             </div>
                         </div>
                     </div>
-                    <div class="mt-1 md:hidden leading-relaxed">
+                    <div class="mt-1 md:hidden">
                         <p class="font-bold text-lg mb-3" x-text="review.summary"></p>
                         <p x-text="review.text"></p>
                     </div>
