INTERNAL-18: Implement pagination and change styles of back button

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
@@ -1,9 +1,11 @@
 <?php
 
 ?>
-<a class="bg-primary-500 py-2.5 px-5 secondary rounded-lg text-white"
-   href="<?= $block->escapeUrl($block->getBackUrl()) ?>">
+<div class="mb-5">
+    <a class="button button--filled-primary"
+       href="<?= $block->escapeUrl($block->getBackUrl()) ?>">
         <span>
             <?= $block->escapeHtml(__('Go back')) ?>
         </span>
-</a>
+    </a>
+</div>
