--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/components/wishlist.css
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/components/wishlist.css
@@ -1,4 +1,4 @@
-.wishlist-widget .price-box {
+/* .wishlist-widget .price-box {
     & .price-label {
         @apply sr-only;
     }
@@ -6,4 +6,4 @@
     & .old-price {
         @apply sr-only;
     }
-}
+} */
