--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
@@ -80,10 +80,10 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                         <template x-for="i in <?= $escaper->escapeJs($ratingSteps) ?>">
                                             <div>
                                                 <template x-if="i <= item.value">
-                                                    <?= $hyvaicons->renderHtml('star', 'text-primary-600 text-xl'); ?>
+                                                    <?= $hyvaicons->renderHtml('star', 'text-primary-500 text-xl'); ?>
                                                 </template>
                                                 <template x-if="i > item.value">
-                                                    <?= $hyvaicons->renderHtml('star', 'text-primary-600 text-xl'); ?>
+                                                    <?= $hyvaicons->renderHtml('star', 'text-secondary-400 text-xl'); ?>
                                                 </template>
                                             </div>
                                         </template>
